  Changelog for the c-ares project

* November 22

- Install ares_dns.h too

- Michael Wallner fixed this problem: When I set domains in the options
  struct, and there are domain/search entries in /etc/resolv.conf, the domains
  of the options struct will be overridden.

* November 6

- Yang Tse removed a couple of potential zero size memory allocations.

- Andreas Rieke fixed the line endings in the areslib.dsp file that I (Daniel)
  broke in the 1.3.2 release. We should switch to a system where that file is
  auto-generated. We could rip some code for that from curl...

Version 1.3.2 (November 3, 2006)

* October 12 2006

- Prevent ares_getsock() to overflow if more than 16 sockets are used.

* September 11 2006

- Guilherme Balena Versiani: I noted a strange BUG in Win32 port
  (ares_init.c/get_iphlpapi_dns_info() function): when I disable the network
  by hand or disconnect the network cable in Windows 2000 or Windows XP, my
  application gets 127.0.0.1 as the only name server. The problem comes from
  'GetNetworkParams' function, that returns the empty string "" as the only
  name server in that case. Moreover, the Windows implementation of
  inet_addr() returns INADDR_LOOPBACK instead of INADDR_NONE.

* August 29 2006

- Brad Spencer did

  o made ares_version.h use extern "C" for c++ compilers
  o fixed compiler warnings in ares_getnameinfo.c
  o fixed a buffer position init for TCP reads

* August 3 2006

- Ravi Pratap fixed ares_getsock() to actually return the proper bitmap and
  not always zero!

Version 1.3.1 (June 24, 2006)

* July 23, 2006

- Gisle Vanem added getopt() to the ahost program. Currently accepts
  only [-t {a|aaaa}] to specify address family in ares_gethostbyname().

* June 19, 2006

- (wahern) Removed "big endian" DNS section and RR data integer parser
  macros from ares_dns.h, which break c-ares on my Sparc64. Bit-wise
  operations in C operate on logical values. And in any event the octets are